# cuda-practice

./: .gitignore  README.md
image-processing/: gaussian_filter.cu  histogram_equalization.cu  image_pipeline  image_pipeline.cu  image_pipeline.h  main.cpp  sobel_edge_detection.cu
matrix_add/: CMakeLists.txt  README.md  matrix_add.cu
matrix_mul/: CMakeLists.txt  README.md  matrix_mul_optimized.cu
